feat(users-update): add create update controller, route, and repository
